# NanonisController

./: CMakeLists.txt  LICENSE.txt  README.md
src/: CMakeLists.txt  bias.cpp  bias.h  biasspectr.cpp  biasspectr.h  biasswp.cpp  biasswp.h  command.cpp  command.h  format.h  function.h  kelvinctrl.cpp  kelvinctrl.h  macro.h  main.cpp  mainwindow.cpp  mainwindow.h  parser.h  socket.cpp  socket.h  tclpipe.cpp  tclpipe.h  tclwrapper.cpp  tclwrapper.h  type.cpp  type.h
src/functions/: atomtrack.cpp  atomtrack.h  autoapproach.cpp  autoapproach.h  beamdefl.cpp  beamdefl.h  bias.cpp  bias.h  biasspectr.cpp  biasspectr.h  biasswp.cpp  biasswp.h  current.cpp  current.h  datalog.cpp  datalog.h  diglines.cpp  diglines.h  folme.cpp  folme.h  fungen1ch.cpp  fungen1ch.h  fungen2ch.cpp  fungen2ch.h  genpictrl.cpp  genpictrl.h  genswp.cpp  genswp.h  interf.cpp  interf.h  kelvinctrl.cpp  kelvinctrl.h  laser.cpp  laser.h  lockin.cpp  lockin.h  lockinfreqswp.cpp  lockinfreqswp.h  marks.cpp  marks.h  (+56 more)
src/functions/scripts/: autogen_header.ps1  autogen_src.ps1  commandInclude.txt  headerName.txt  srcName.txt
test/: CMakeLists.txt  bias.cpp  format.cpp  function.cpp  parser.cpp  request.cpp
test/bias/: CMakeLists.txt  bias.cpp
test/format/: CMakeLists.txt  format.cpp
test/function/: CMakeLists.txt  function.cpp
test/pipe/: CMakeLists.txt  main.cpp
test/request/: CMakeLists.txt  request.cpp
test/stdredirection/: CMakeLists.txt  main.cpp
test/tcl/: CMakeLists.txt  main.cpp  tclcommand.cpp  tclcommand.h
test/tcpserver/: CMakeLists.txt  main.cpp  tcpserverwidget.cpp  tcpserverwidget.h
