# Copyright (c) 2025 Zihao Wu
# Use of this source code is governed by the MIT license that can be
# found in the LICENSE file.

cmake_minimum_required(VERSION 3.16 FATAL_ERROR)

add_subdirectory(format)
add_subdirectory(bias)
add_subdirectory(function)
add_subdirectory(request)
add_subdirectory(tcpserver)
add_subdirectory(tcl)
add_subdirectory(pipe)
add_subdirectory(stdredirection)
